💬  Better post descriptions

--- a/src/content/posts/developing-browser-extensions-with-nextjs.mdx
+++ b/src/content/posts/developing-browser-extensions-with-nextjs.mdx
@@ -1,6 +1,8 @@
 ---
 title: Developing Browser Extensions with Next.js
-description: Learn how to develop browser extensions with Next.js.
+description:
+  Learn how to bundle a Next.js application within a browser extension.
+  Compatible with Chromium-based browsers and Firefox.
 published: 2022-04-19
 repo: demo-nextjs-browser-extension
 ---
