--- a/src/content/posts/local-state-with-ngrx-and-apollo-angular.mdx
+++ b/src/content/posts/local-state-with-ngrx-and-apollo-angular.mdx
@@ -1,8 +1,7 @@
 ---
 title: Local State with NgRx & Apollo Angular
 description:
-  Learn how to use NgRx and Apollo Angular to manage local state in your Angular
-  application.
+  An approach to managing local state in Angular when working with GraphQL.
 published: 2021-05-01
 repo: local-state-with-ngrx-and-apollo-angular
 ---
