--- a/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
+++ b/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
@@ -1,8 +1,8 @@
 ---
 title: Tailwind CSS Responsive Design Without Breakpoints
 description:
-  Learn how to use Tailwind CSS to create responsive designs without using
-  breakpoints.
+  Solve bloated Tailwind CSS by implementing a fluid responsive design system
+  via the power of CSS Clamp!
 published: 2022-09-17
 repo: tailwindcss-fluid-responsive-design
 ---
