--- a/src/content/posts/hyper-terminal-and-its-arsenal-of-plugins.mdx
+++ b/src/content/posts/hyper-terminal-and-its-arsenal-of-plugins.mdx
@@ -1,6 +1,7 @@
 ---
 title: Hyper Terminal and its arsenal of plugins
-description: A brief introduction to Hyper Terminal and its arsenal of plugins
+description:
+  Check out Hyper Terminal and a few useful plugins offered by its community.
 published: 2022-03-17
 ---
 
