--- a/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
+++ b/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
@@ -11,8 +11,8 @@ Let's begin by looking at a common responsive design pattern in Tailwind CSS:
 
 ```html
 <div class="m-3 p-2 md:m-4 md:p-4 xl:m-6 xl:p-6">
-  <h1 class="mb-2 text-base md:mb-4 md:text-xl xl:mb-6 xl:text-2xl">Title</h1>
-  <p class="text-sm md:text-lg xl:text-2xl">Lorem ipsum dolor sit amet.</p>
+  <h1 class="xl:text-1xl mb-2 text-base md:mb-4 md:text-xl xl:mb-6">Title</h1>
+  <p class="xl:text-1xl text-sm md:text-lg">Lorem ipsum dolor sit amet.</p>
 </div>
 ```
 
@@ -58,7 +58,7 @@ module.exports = {
 
 When using these new fluid font size classes, the clamp will grow/shrink the
 font size in relation to the viewport. No need to worry about multiple
-breakpoints anymore! `text-base md:text-xl xl:text-2xl` → `text-fluid-2`
+breakpoints anymore! `text-base md:text-xl xl:text-1xl` → `text-fluid-2`
 
 ## Configure Fluid Spacing
 
