--- a/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
+++ b/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
@@ -40,9 +40,7 @@ add clamps for our font sizes:
 > These clamps were configured using a tool called [Utopia][utopia-fonts]. I
 > highly recommend this tool for building out your clamps!
 
-```js
-/** tailwind.config.js */
-
+```js title="tailwind.config.js"
 /** @type {import('tailwindcss').Config} */
 module.exports = {
   ...
@@ -69,9 +67,7 @@ margin, width, height, maxWidth, maxHeight, gap, inset, space, and translate.
 
 > These are also generated from [Utopia][utopia-spacing].
 
-```js
-/** tailwind.config.js */
-
+```js title="tailwind.config.js"
 /** @type {import('tailwindcss').Config} */
 module.exports = {
   ...
