--- a/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt.mdx
+++ b/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt.mdx
@@ -8,12 +8,12 @@ repo: summarize-blog-posts-with-typescript-and-openais-gpt
 ---
 
 Blog posts are a key component in learning new technologies accross the web.
-With [OpenAI's GPT][openai-gpt], we can take this a step further by easily
-summarizing blog posts into a few sentences. Allowing quicker consumption while
-retaining key concepts and takeaways.
+With [OpenAI's GPT][openai-gpt], we can take this a step further by summarizing
+blog posts into a few sentences. Allowing quicker consumption while retaining
+key concepts.
 
-In this article, we will learn how to _scrape_ blog post content and later
-_summarize_ it using OpenAI's GPT.
+In this article, we will learn how to _scrape_ blog post content and _summarize_
+it using OpenAI's GPT via TypeScript.
 
 ## Setup
 
@@ -21,10 +21,8 @@ Before getting started, please ensure you have an OpenAI account. If not, you
 can signup on their website [here][openai-signup]. Once signed up, take note of
 your **API Key** as we'll need it later.
 
-> This project will be using [Node.js][nodejs-download] and
-> [TypeScript][typescript]. Ensure you have Node.js 18.x installed and a basic
-> understanding of each technology. You can check your Node.js version by
-> running `node -v` within the terminal.
+> This project will be using [Node.js][nodejs-download] 18.x. You can check your
+> Node.js version by running `node -v` within the terminal.
 
 Let's begin by initializing our project and installing dependencies:
 
@@ -32,13 +30,13 @@ Let's begin by initializing our project and installing dependencies:
 # Create the project directory and navigating into it
 mkdir summarize-blog-posts-with-typescript-and-openais-gpt && cd $_
 # Initialize project
-npm init -y
+npm init -y && npm pkg set type=module
 # Install dependencies
 npm i openai gpt-3-encoder cheerio user-agents dotenv typescript @types/node @types/user-agents
 ```
 
 Now that we have our project setup, let's create an `.env` file and place our
-secret OpenAI API Key into there.
+secret OpenAI API Key in there.
 
 ```bash title=".env"
 OPENAI_API_KEY='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
@@ -85,7 +83,8 @@ const openai = new OpenAIApi(configuration);
 ## Web Scraping Content
 
 In order to summarize a blog post, we must first capture its contents. Start by
-using the [Fetch API][fetch-api] to get all HTML content from the blog post.
+using the [Fetch API][fetch-api] to get all HTML content from the blog post's
+webpage.
 
 We must also pass a `User-Agent` header to the request. Certain websites will
 block requests that do not have this. We can generate one via the
@@ -135,11 +134,8 @@ const content = $('main').length > 0 ? $('main p') : $('body p');
 
 ## Summarizing Content
 
-There is one more **required** step before plugging our blog post content into
-OpenAI's GPT. The API has a max number of [tokens][openai-tokens] that can be
-passed to it. This means we must truncate our content to fit within this limit.
-
-Tokens are a bit complicated as they're comprised of more than just words.
+OpenAI's GPT has a max number of [tokens][openai-tokens] that can be passed into
+it. This means we must truncate our content to fit within this limit.
 Thankfully, we can leverage [gpt-3-encoder][gpt-3-encoder] to do all the heavy
 lifting.
 
@@ -224,7 +220,7 @@ Here's an example of what the summary may look like:
 
 In very few lines of code, we were able to pull all content from a blog post and
 present a detailed summary of that content. As mentioned earlier, this allows
-for quick consumption while still highlighting the key points and takeaways.
+quick consumption while retaining key concepts.
 
 You can see this in action on my personal project [feedjoy][feedjoy]. Under each
 blog post exists a summary of its content.
@@ -234,7 +230,6 @@ blog post exists a summary of its content.
 [openai-tokens]:
   https://help.openai.com/en/articles/4936856-what-are-tokens-and-how-to-count-them
 [nodejs-download]: https://nodejs.org/en/download
-[typescript]: https://typescriptlang.org
 [tsconfig-options]:
   https://www.typescriptlang.org/docs/handbook/tsconfig-json.html
 [fetch-api]: https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API
