--- a/src/content/posts/tailwindcss-responsive-design-without-breakpoints/index.mdx
+++ b/src/content/posts/tailwindcss-responsive-design-without-breakpoints/index.mdx
@@ -1,10 +1,11 @@
 ---
 title: Tailwind CSS Responsive Design Without Breakpoints
 description:
-  Solve bloated Tailwind CSS by implementing a fluid responsive design system
-  via the power of CSS Clamp!
+  Solve bloated Tailwind CSS by implementing a fluid responsive design system via the power of CSS
+  Clamp!
 published: 2022-09-17
 repo: tailwindcss-fluid-responsive-design
+cover: ./cover.png
 ---
 
 Let's begin by looking at a common responsive design pattern in Tailwind CSS:
@@ -16,29 +17,28 @@ Let's begin by looking at a common responsive design pattern in Tailwind CSS:
 </div>
 ```
 
-[Tailwind Breakpoints][tailwind-responsive-design] can be a double-edged sword.
-It's convenient to handle all our breakpoints inline; however, this results in
-_bloated_ HTML...
+[Tailwind Breakpoints][tailwind-responsive-design] can be a double-edged sword. It's convenient to
+handle all our breakpoints inline; however, this results in _bloated_ HTML...
 
-Considering responsive design is required, how to do we solve this problem while
-still leveraging Tailwind CSS? _Fluid Responsive Design_!
+Considering responsive design is required, how to do we solve this problem while still leveraging
+Tailwind CSS? _Fluid Responsive Design_!
 
 ## Fluid Responsive Design
 
-Fluid Responsive Design is a responsive design pattern that leverages [CSS
-Clamp][css-clamp] instead of the traditional breakpoint media queries.
+Fluid Responsive Design is a responsive design pattern that leverages [CSS Clamp][css-clamp] instead
+of the traditional breakpoint media queries.
 
-In short, CSS Clamp is a CSS function that allows us to define a range of values
-(minimum, preferred, maximum). Based on the viewport size, the _preferred_ value
-will then scale automatically within the minimum and maximum.
+In short, CSS Clamp is a CSS function that allows us to define a range of values (minimum,
+preferred, maximum). Based on the viewport size, the _preferred_ value will then scale automatically
+within the minimum and maximum.
 
 ## Configure Fluid Typography
 
-Let's now bring CSS Clamp into our Tailwind CSS configuration. To begin, we'll
-add clamps for our font sizes:
+Let's now bring CSS Clamp into our Tailwind CSS configuration. To begin, we'll add clamps for our
+font sizes:
 
-> These clamps were configured using a tool called [Utopia][utopia-fonts]. I
-> highly recommend this tool for building out your clamps!
+> These clamps were configured using a tool called [Utopia][utopia-fonts]. I highly recommend this
+> tool for building out your clamps!
 
 ```js title="tailwind.config.js"
 /** @type {import('tailwindcss').Config} */
@@ -54,16 +54,16 @@ module.exports = {
 }
 ```
 
-When using these new fluid font size classes, the clamp will grow/shrink the
-font size in relation to the viewport. No need to worry about multiple
-breakpoints anymore! `text-base md:text-xl xl:text-2xl` → `text-fluid-2`
+When using these new fluid font size classes, the clamp will grow/shrink the font size in relation
+to the viewport. No need to worry about multiple breakpoints anymore!
+`text-base md:text-xl xl:text-2xl` → `text-fluid-2`
 
 ## Configure Fluid Spacing
 
-Now that we have fluid font sizes, let's add clamps for our fluid spacing. By
-setting [Tailwind Spacing][tailwind-spacing], we gain fluid spacing for padding,
-margin, width, height, maxWidth, maxHeight, gap, inset, space, and translate.
-`p-2 m-3 md:p-4 md:m-4 xl:p-6 xl:m-6` → `p-fluid-1 m-fluid-2`
+Now that we have fluid font sizes, let's add clamps for our fluid spacing. By setting [Tailwind
+Spacing][tailwind-spacing], we gain fluid spacing for padding, margin, width, height, maxWidth,
+maxHeight, gap, inset, space, and translate. `p-2 m-3 md:p-4 md:m-4 xl:p-6 xl:m-6` →
+`p-fluid-1 m-fluid-2`
 
 > These are also generated from [Utopia][utopia-spacing].
 
@@ -84,8 +84,8 @@ module.exports = {
 
 ## Remove Breakpoints
 
-With our fluid responsive design configured, lets jump back to our original HTML
-to remove those breakpoints:
+With our fluid responsive design configured, lets jump back to our original HTML to remove those
+breakpoints:
 
 ```html
 <div class="m-fluid-2 p-fluid-1">
@@ -94,12 +94,12 @@ to remove those breakpoints:
 </div>
 ```
 
-As you can see, the HTML becomes far less bloated. The font sizes, paddings, and
-margins only need to be defined once without having multiple breakpoints. All
-while keeping the conveniences of Tailwind CSS!
+As you can see, the HTML becomes far less bloated. The font sizes, paddings, and margins only need
+to be defined once without having multiple breakpoints. All while keeping the conveniences of
+Tailwind CSS!
 
-Bonus! If your using Utopia, there's a tailwindcss plugin for it. Check it out
-here: [tailwindcss-utopia][tailwindcss-utopia]
+Bonus! If your using Utopia, there's a tailwindcss plugin for it. Check it out here:
+[tailwindcss-utopia][tailwindcss-utopia]
 
 [tailwind-responsive-design]: https://tailwindcss.com/docs/responsive-design
 [css-clamp]: https://developer.mozilla.org/en-US/docs/Web/CSS/clamp
