⚡️ reduce image sizes and convert to webp

--- a/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables/index.mdx
+++ b/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables/index.mdx
@@ -4,7 +4,7 @@ description:
   Customize an Astro project's Shiki syntax highlighting using a list of available CSS Variables.
 published: 2023-01-09
 repo: astro-shiki-css-variables
-cover: ./cover.png
+cover: ./cover.webp
 ---
 
 By default, Astro uses [Shiki][shiki] for syntax highlighting markdown code blocks. Astro comes with
