--- a/src/content/posts/developing-browser-extensions-with-nextjs/index.mdx
+++ b/src/content/posts/developing-browser-extensions-with-nextjs/index.mdx
@@ -5,7 +5,7 @@ description:
   Chromium-based browsers and Firefox.
 published: 2022-04-19
 repo: demo-nextjs-browser-extension
-cover: ./cover.png
+cover: ./cover.webp
 ---
 
 Although modern browsers offer a plethora of tooling to help assist web development and general
