--- a/src/content/posts/hyper-terminal-and-its-arsenal-of-plugins/index.mdx
+++ b/src/content/posts/hyper-terminal-and-its-arsenal-of-plugins/index.mdx
@@ -2,7 +2,7 @@
 title: Hyper Terminal and its arsenal of plugins
 description: Check out Hyper Terminal and a few useful plugins offered by its community.
 published: 2022-03-17
-cover: ./cover.png
+cover: ./cover.webp
 ---
 
 When it comes to terminals, I've worked hands on with solutions including Git Bash, ConEmu, and
