--- a/src/content/posts/local-state-with-ngrx-and-apollo-angular/index.mdx
+++ b/src/content/posts/local-state-with-ngrx-and-apollo-angular/index.mdx
@@ -3,7 +3,7 @@ title: Local State with NgRx & Apollo Angular
 description: An approach to managing local state in Angular when working with GraphQL.
 published: 2021-05-01
 repo: local-state-with-ngrx-and-apollo-angular
-cover: ./cover.png
+cover: ./cover.webp
 ---
 
 Within this article, I want to provide a helpful solution in Angular for managing local state when
