--- a/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt/index.mdx
+++ b/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt/index.mdx
@@ -4,7 +4,7 @@ description:
   Implement basic web scraping and leverage OpenAI's GPT to summarize blog posts via TypeScript.
 published: 2023-05-27
 repo: summarize-blog-posts-with-typescript-and-openais-gpt
-cover: ./cover.png
+cover: ./cover.webp
 ---
 
 Blog posts are a key component in learning new technologies accross the web. With [OpenAI's
