--- a/src/content/posts/tailwindcss-responsive-design-without-breakpoints/index.mdx
+++ b/src/content/posts/tailwindcss-responsive-design-without-breakpoints/index.mdx
@@ -5,7 +5,7 @@ description:
   Clamp!
 published: 2022-09-17
 repo: tailwindcss-fluid-responsive-design
-cover: ./cover.png
+cover: ./cover.webp
 ---
 
 Let's begin by looking at a common responsive design pattern in Tailwind CSS:
